KM-472-Responsive-Fixes: decreased padding on home page and made font smaller on mobile.

--- a/src/components/home/homePage.scss
+++ b/src/components/home/homePage.scss
@@ -47,7 +47,7 @@
 
 @media(min-width: $phone-breakpoint) {
   .home-page-description {
-    padding: 50px 0px 20px;
+    padding: 20px 0px 20px;
     line-height: 2.25rem;
   }
 }
